fixed contest overflow

--- a/source/stylesheets/_contest.css.scss
+++ b/source/stylesheets/_contest.css.scss
@@ -1,3 +1,7 @@
+body, html{
+	overflow-x: hidden;
+}
+
 #contest{
 	background:url('https://s3.amazonaws.com/myfangate.com/hollywood/white-grunge.jpg');
 	background-repeat: repeat;
@@ -16,5 +20,8 @@
 	h1{
 	    font-family: 'octin_spraypainta_regular';
 	    font-size: 60px;
+	}
+	.prize{
+		margin-top: 10%;
 	}
 }
